// Copyright 2025 The Google AI Edge Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto2";

package rag.core;

option java_multiple_files = true;
option java_package = "com.google.ai.edge.localagents.rag.memory.proto";

message KeyValuePair {
  optional string key = 1;
  optional string value = 2;
}

message Metadata {
  repeated KeyValuePair key_value_pairs = 1;
}

message MemoryRecord {
  optional string text = 1;
  repeated float embeddings = 2 [packed = true];
  optional Metadata metadata = 3;
}

message MemoryEntry {
  optional string text = 1;
  // Metadata associated with this memory entry.
  optional Metadata metadata = 2;
  // Custom text to get embeddings for. If this is not set, the text field
  // will be used.
  optional string custom_embedding_text = 3;
}

message TableConfig {
  optional string name = 1;
  repeated ColumnConfig columns = 2;
  
  message ColumnConfig {
    enum KeyType {
      DEFAULT_NOT_KEY = 0;
      PRIMARY_KEY = 1;
    }
    
    optional string name = 1;
    optional string sql_type = 2;
    optional KeyType key_type = 3 [default = DEFAULT_NOT_KEY];
    optional bool auto_increment = 4 [default = false];
    optional bool is_nullable = 5 [default = false];
  }
}
